--- a/index.html
+++ b/index.html
@@ -15,69 +15,69 @@
       <section class="profile">
         <div class="profile__info">
           <div class="profile__avatar"></div>
-          <div class="profile__profileInfo">
+          <div class="profile__profile-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__button link"><img class="profile__pen" src="./img/pen.svg" alt="Кнопка редактирования"></button>
+            <button class="profile__button link" type="button"><img class="profile__pen" src="./img/pen.svg" alt="Кнопка редактирования"></button>
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__addButton link"><img class="profile__plus" src="./img/plus.svg" alt="Кнопка добавления"></button> 
+        <button class="profile__add-button link" type="button"><img class="profile__plus" src="./img/plus.svg" alt="Кнопка добавления"></button> 
       </section>
       <section class="elements">
         <ul class="elements__items">
           <li class="elements__item">
             <img class="elements__img" src="./img/kirill-pershin-1088404-unsplash.jpg" alt="Фотография Карачаевск">
             <div class="elements__description">
-              <p class="elements__title">Карачаевск</p>
-              <button class="elements__like link"></button>
+              <h2 class="elements__title">Карачаевск</h2>
+              <button class="elements__like link" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__img" src="./img/kirill-pershin-1404681-unsplash.jpg" alt="Фотография Гора Эльбрус">
             <div class="elements__description">
-              <p class="elements__title">Гора Эльбрус</p>
-              <button class="elements__like link"></button>
+              <h2 class="elements__title">Гора Эльбрус</h2>
+              <button class="elements__like link" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__img" src="./img/kirill-pershin-1556355-unsplash.jpg" alt="Фотография Домбай">
             <div class="elements__description">
-              <p class="elements__title">Домбай</p>
-              <button class="elements__like link"></button>
+              <h2 class="elements__title">Домбай</h2>
+              <button class="elements__like link" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__img" src="./img/kirill-pershin-1404681-unsplash.jpg" alt="Фотография Гора Эльбрус">
             <div class="elements__description">
-              <p class="elements__title">Гора Эльбрус</p>
-              <button class="elements__like link"></button>
+              <h2 class="elements__title">Гора Эльбрус</h2>
+              <button class="elements__like link" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__img" src="./img/kirill-pershin-1556355-unsplash.jpg" alt="Фотография Домбай">
             <div class="elements__description">
-              <p class="elements__title">Домбай</p>
-              <button class="elements__like link"></button>
+              <h2 class="elements__title">Домбай</h2>
+              <button class="elements__like link" type="button"></button>
             </div>
           </li>
           <li class="elements__item">
             <img class="elements__img" src="./img/kirill-pershin-1088404-unsplash.jpg" alt="Фотография Карачаево-Черкессия">
             <div class="elements__description">
-              <p class="elements__title">Карачаево-Черкессия</p>
-              <button class="elements__like link"></button>
+              <h2 class="elements__title">Карачаево-Черкессия</h2>
+              <button class="elements__like link" type="button"></button>
             </div>
           </li>
         </ul>     
       </section>   
     </main>
     <footer class="footer">
-      <address class="footer__name">© 2020 Mesto Russia</address>
+      <p class="footer__name">© 2020 Mesto Russia</p>
     </footer>
     <div class="popup">
       <div class="popup__container">
-        <button class="popup__closed link"></button>
-        <form class="popup__form" method="get">
-          <p class="popup__title">Редактировать профиль</p>
+        <button class="popup__closed link" type="button"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__form" method="get" name="form">
           <input class="popup__input popup__input_type_name" value="Жак-Ив Кусто" type="text" name="name" >
           <input class="popup__input popup__input_type_profession" value="Исследователь океана" name="profession" >
           <button class="popup__save link" type="submit">Сохранить</button>
@@ -85,6 +85,6 @@
       </div>
    </div>
   </div>
-  <script src="index.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 </html>
