--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="profile__avatar"></div>
           <div class="profile__profile-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__button link" type="button"><div class="profile__pen"></div></button>
+            <button class="profile__button link" type="button"><img class="profile__pen" src="./img/pen.svg" alt="Кнопка редактирования"></button>
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
