Добавлен плавный переход

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="popup__container-photo">
         <button class="popup__closed popup__closed-img link" type="button"></button>
         <div class="popup__img">
-          <img class="popup__photo" src="" alt="Фотография">
+          <img class="popup__photo" src="#" alt="Фотография">
           <h2 class="popup__title-photo">Новое место</h2> 
         </div>
       </div>
