--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
   <template id = "elements__item-template">
     <li class="elements__item">
-      <img class="elements__img" src="" alt="Фотография">
+      <img class="elements__img" src="#" alt="Фотография">
       <button class="elements__trash link" type="button"></button>
       <div class="elements__description">
         <h2 class="elements__title"></h2>
