--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   </div>
   <template id = "elements__item-template">
     <li class="element__item">
-      <img class="elements__img" src="#" alt="Фотография">
-      <button class="elements__trash link" type="button"></button>
-      <div class="elements__description">
-        <h2 class="elements__title"></h2>
-        <button class="elements__like link" type="button"></button>
+      <img class="element__img" src="#" alt="Фотография">
+      <button class="element__trash link" type="button"></button>
+      <div class="element__description">
+        <h2 class="element__title"></h2>
+        <button class="element__like link" type="button"></button>
       </div>
     </li>
   </template>
