Исправлена форма редактирования профиля

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <button class="popup__closed popup__closed-description link" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form popup__form-description" method="get" name="form">
-          <input class="popup__input popup__input-name popup__input_type_name" placeholder="Жак-Ив Кусто" value="" type="text" name="name" >
-          <input class="popup__input popup__input-profession popup__input_type_profession" placeholder="Исследователь океана" value="" name="profession" >
+          <input class="popup__input popup__input-name popup__input_type_name" placeholder="Имя" value="" type="text" name="name" >
+          <input class="popup__input popup__input-profession popup__input_type_profession" placeholder="Описание" value="" name="profession" >
           <button class="popup__save link" type="submit">Сохранить</button>
         </form>
       </div>
