--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <div class="profile__avatar"></div>
           <div class="profile__profile-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__button link" type="button"><img class="profile__pen" src="./img/pen.svg" alt="Кнопка редактирования"></button>
+            <button class="profile__button button" type="button"><img class="profile__pen" src="./img/pen.svg" alt="Кнопка редактирования"></button>
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button link" type="button"><img class="profile__plus" src="./img/plus.svg" alt="Кнопка добавления"></button> 
+        <button class="profile__add-button button" type="button"><img class="profile__plus" src="./img/plus.svg" alt="Кнопка добавления"></button> 
       </section>
       <section class="elements">
         <ul class="elements__items"></ul>     
@@ -32,7 +32,7 @@
     </footer>
     <div class="popup popup_type_description">
       <div class="popup__container">
-        <button class="popup__closed popup__closed-description link" type="button"></button>
+        <button class="popup__closed popup__closed-description button" type="button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form popup__form-description" method="get" name="form" novalidate>
           <label class="popup__label">
@@ -45,13 +45,13 @@
             placeholder="Описание" value="" name="profession" minlength="2" maxlength="200" required>
             <span class="profession-error popup__error"></span>
           </label>
-          <button class="popup__save popup__save_disabled link" type="submit">Сохранить</button>
+          <button class="popup__save popup__save_disabled button" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
     <div class="popup popup_type_place">
       <div class="popup__container">
-        <button class="popup__closed popup__closed-place link" type="button"></button>
+        <button class="popup__closed popup__closed-place button" type="button"></button>
         <h2 class="popup__title">Новое место</h2>
         <form class="popup__form popup__form-img" method="get" name="form" novalidate>
           <label class="popup__label">
@@ -64,13 +64,13 @@
             placeholder="Ссылка на картинку" value="" name="description" type="url" required>
             <span class="description-error popup__error"></span>
           </label>
-          <button class="popup__save popup__save_disabled link" type="submit">Создать</button>
+          <button class="popup__save popup__save_disabled button" type="submit">Создать</button>
         </form>
       </div>
    </div> 
     <div class="popup popup_type_picture">
       <div class="popup__container-photo">
-        <button class="popup__closed popup__closed-img link" type="button"></button>
+        <button class="popup__closed popup__closed-img button" type="button"></button>
         <div class="popup__img">
           <img class="popup__photo" src="#" alt="Фотография">
           <h2 class="popup__title-photo">Новое место</h2> 
@@ -81,10 +81,10 @@
   <template id = "elements__item-template">
     <li class="element__item">
       <img class="element__img" src="#" alt="Фотография">
-      <button class="element__trash link" type="button"></button>
+      <button class="element__trash button" type="button"></button>
       <div class="element__description">
         <h2 class="element__title"></h2>
-        <button class="element__like link" type="button"></button>
+        <button class="element__like button" type="button"></button>
       </div>
     </li>
   </template>
