--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
     <div class="popup popup_type_delete">
       <div class="popup__container">
         <button class="popup__closed popup__closed-delete button" type="button"></button>
-        <div class="popup__delete"></div>
+        <div class="popup__delete">
           <h2 class="popup__title">Вы уверены?</h2>
           <form class="popup__form popup__form_delete" method="get" name="form" novalidate>
             <button class="popup__save button" type="submit">Да</button>
